--- a/classHomeWork/codeHelp-Figma-Assignment/index.html
+++ b/classHomeWork/codeHelp-Figma-Assignment/index.html
@@ -11,7 +11,7 @@
     <div id="wrapper">
       <div class="container">
         <nav>
-          <img class="logo-img" src="./logo.png" alt="" />
+          <img class="logo-img" src="./assets/logo.png" alt="" />
           <ul class="items">
             <li class="item">Team</li>
             <li class="item">About Us</li>
@@ -39,13 +39,13 @@
               </p>
             </div>
             <div class="right-img">
-              <img class="team-img" src="./img-1.png" alt="team-img" />
+              <img class="team-img" src="./assets/img-1.png" alt="team-img" />
             </div>
           </section>
 
           <section aria-label="founder" class="founder-section">
             <div class="ceo-img">
-              <img src="./img-2.png" alt="" />
+              <img src="./assets/img-2.png" alt="" />
             </div>
 
             <div class="team-text-section">
@@ -69,7 +69,7 @@
 
         <footer>
           <div class="first-div footer-div">
-            <img src="./logo.png" alt="" class="footer-logo" />
+            <img src="./assets/logo.png" alt="" class="footer-logo" />
             <a class="anchor" href="#">OUR Privacy Policy</a>
             <div class="copyright-div">
               <p class="footer-text">© lorem Ipsum 2023</p>
@@ -101,13 +101,13 @@
 
           <div class="fourth-div">
             <div class="social-media">
-              <img src="./facebook.png" alt="facebook" />
+              <img src="./assets/facebook.png" alt="facebook" />
             </div>
             <div class="social-media">
-              <img src="./twitter.png" alt="twitter" />
+              <img src="./assets/twitter.png" alt="twitter" />
             </div>
             <div class="social-media">
-              <img src="./instagram.png" alt="instagram" />
+              <img src="./assets/instagram.png" alt="instagram" />
             </div>
           </div>
         </footer>
