--- a/classHomeWork/hire-me-button/index.html
+++ b/classHomeWork/hire-me-button/index.html
@@ -44,7 +44,8 @@
         transform: scaleX(100%);
         transform-origin: left;
         transition-timing-function: ease-out;
-        transition-duration: 0.8s;
+        transition-duration: 0.6s;
+        cursor: pointer;
       }
     </style>
   </head>
