--- a/classCodePracticeByMe/DOM_class_2nd/index.html
+++ b/classCodePracticeByMe/DOM_class_2nd/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Basic 4 Class</title>
+    <title>Event Listener DOM Class 2nd</title>
   </head>
-
   <body>
-    <script src="./js_basics_4.js"></script>
+    <button>clicked me</button>
+
+    <script src="./events.js"></script>
   </body>
 </html>
