js dom class 2 final submit

--- a/classCodePracticeByMe/DOM_class_2nd/index.html
+++ b/classCodePracticeByMe/DOM_class_2nd/index.html
@@ -7,8 +7,19 @@
     <title>Event Listener DOM Class 2nd</title>
   </head>
   <body>
-    <button>clicked me</button>
+    <!-- <p id="wrapper">Hello Everyone</p>
+    <button>clicked me</button> -->
+    <!-- <a href="https://www.google.com">GOOGLE 1</a>
+    <a href="https://www.google.com">GOOGLE 2</a>
+    <a href="https://www.google.com">GOOGLE 3</a>
+    <a href="https://www.google.com">GOOGLE 4</a> -->
 
+    <article id="wrapper">
+      <p>Para <span>Span</span></p>
+      <p>Para <span>Span</span></p>
+      <p>Para <span>Span</span></p>
+      <p>Para <span>Span</span></p>
+    </article>
     <script src="./events.js"></script>
   </body>
 </html>
