add dom class code folder

--- a/classCodePracticeByMe/DOM_class_2nd/index.html
+++ b/classCodePracticeByMe/DOM_class_2nd/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Listener DOM Class 2nd</title>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // yanha ab ham sara js ka code likh sakte hain lekin ye best practice nhi hai
+      });
+    </script>
   </head>
   <body>
     <!-- <p id="wrapper">Hello Everyone</p>
