--- a/unWrap-DOM-Class/index.html
+++ b/unWrap-DOM-Class/index.html
@@ -32,6 +32,6 @@
         </button>
       </div>
     </div>
-    <script src="./weather.js"></script>
+    <script src="./counter.js"></script>
   </body>
 </html>
